--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
         <ol>
 
-            <li> <a href="./exp_labo.html"> Experiencia laborar</a> </li>
-            <li> <a href="./exp_acad.html"> Experiencia académica</a></li>
+            <li> <a href="./laboral/exp_labo.html"> Experiencia laborar</a> </li>
+            <li> <a href="./academica/exp_acad.html"> Experiencia académica</a></li>
 
         </ol>
 
