--- a/index.html
+++ b/index.html
@@ -6,17 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./estilos.css">
+    <style>
+        h3 {
+            color: #5f9ea0;
+            font-size: 27px;
+        }
+
+        body {
+            font-family: lucida console;
+        }
+    </style>
 </head>
 
 <body>
 
-    <h1>CURRICULUM VITAE</h1>
+    <h1 style="
+    text-align: center;
+    font-size: 62px;
+    letter-spacing: 10px;
+    margin-bottom: 70px;">
+        CURRICULUM VITAE</h1>
 
-    <a href="https://jercilla-at-penascal.github.io/PP11-CV-en-HTML-CSS/xxx@grupopenascal.com">
-        <img src="./imagenes/foto.png" alt="foto">
+    <a target="_blank" class="caja_imagen"
+        https://jercilla-at-penascal.github.io/PP11-CV-en-HTML-CSS/xxx@grupopenascal.com">
+        <img src="./foto.png" alt="foto">
     </a>
 
-    <div>
+    <div class="caja_datos">
 
         <h3>
 
@@ -39,8 +55,8 @@
 
         <ol>
 
-            <li> <a href="./laboral/exp_labo.html"> Experiencia laborar</a> </li>
-            <li> <a href="./academica/exp_acad.html"> Experiencia académica</a></li>
+            <li> <a class="enlaces" href="./exp_labo.html"> Experiencia laborar</a> </li>
+            <li> <a class="enlaces" href="./exp_acad.html"> Experiencia académica</a></li>
 
         </ol>
 
