titulos cambidos y rutas creadas para css e imagenes

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./estilos.css">
+    <title>CURRICULUM VITAE</title>
+    <link rel="stylesheet" href="./estilos/estilos.css">
     <style>
         h3 {
             color: #5f9ea0;
@@ -29,7 +29,7 @@
 
     <a target="_blank" class="caja_imagen"
         https://jercilla-at-penascal.github.io/PP11-CV-en-HTML-CSS/xxx@grupopenascal.com">
-        <img src="./foto.png" alt="foto">
+        <img src="./imagenes/foto.png" alt="foto">
     </a>
 
     <div class="caja_datos">
