--- a/exp_labo.html
+++ b/exp_labo.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./estilos.css">
+    <title>EXPERIENCIA LABORAL</title>
+    <link rel="stylesheet" href="./estilos/estilos.css">
     <style>
         th {
             color: #5f9ea0;
